tests/toylang/neg/000651_mutation.toylang
program a = { a = a == while; } .
